Fixed animations on mobile

--- a/styles/stylus/animation/_animation.styl
+++ b/styles/stylus/animation/_animation.styl
@@ -1,7 +1,6 @@
 //Animation
 .view-animate
   position relative
-  transition all 1s
   height 100%
   padding-top 180px
   +above(480px)
